--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,6 +3,18 @@
   margin-right: 0;
   display: flex;
   justify-content: flex-end;
+  color: var(--red);
+  font-size: 3em;
+  margin: 30px 30px 0 30px;
+
+}
+.user-avatar:hover {
+  cursor: url("../../images/rainbow-reverse.png"), auto;
+  color: var(--veronica-purple);
+}
+
+.user-avatar h3{
+font-size: 0.5em;
 }
 
 .icons-style {
@@ -10,9 +22,11 @@
   color: var(--red);
   text-decoration: none;
 }
-.icons-style h3 {
-  font-size: 0.3em;
+
+.icons-style:hover{
+  color: var(--lif);
 }
+
 
 .icons-group-on {
   display: flex;
@@ -45,4 +59,18 @@
 .selected {
   color: var(--carnation-pink); 
   text-shadow: 2px 2px 1px var(--red);
+}
+
+.menu-btn{
+  font-size: 3em;
+  margin: 30px;
+  margin-bottom: 0;
+}
+
+.menu-btn h3{
+  font-size: 0.5em;
+}
+
+.menu-btn:hover{
+  color: var(--carnation-pink) !important;
 }
