--- a/src/Util.css
+++ b/src/Util.css
@@ -73,7 +73,12 @@ Red: #E42525
   text-shadow: 2px 2px #e42525;
   line-height: 60px;
   padding: 10px;
-  border: 3px dashed #8447ff;
+  color:#8447ff;
+  font-size: 1.5em;
+}
+
+.loading-style{
+  font-size: 0.5em;
 }
 
 .special-select {
