--- a/src/styles/AddNewVideo.css
+++ b/src/styles/AddNewVideo.css
@@ -29,3 +29,15 @@
 .save-video-btn{
     border: 2px solid var(--veronica-purple);
 }
+
+@media screen and (max-width: 480px) {
+    .add-video-form {
+        width: 95%;
+        padding: 5px;
+        font-size: 14px;
+    }
+    
+    .form-group label {
+        font-size: 0.7em;
+    }
+}
