--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -128,7 +128,6 @@ font-size: 0.5em;
     padding: 20px; /* Add padding for margin */
     box-sizing: border-box; /* Include padding in height calculation */
   }
-
   .mobile-menu.show {
     display: flex; /* Show menu when active */
   }
@@ -154,9 +153,10 @@ font-size: 0.5em;
 
   /* Mobile button styles */
   .mobile-menu .default-btn {
-    background-color: var(--veronica-purple); /* Default button color */
-    color: var(--maize-yellow); /* Button text color */
+    background-color: var(--maize-yellow); /* Default button color */
+    color: var(--red); /* Button text color */
     padding: 10px 20px; /* Padding for button */
+    text-shadow: 1px 1px 1px var(--carnation-pink);
     border: none; /* Remove default border */
     border-radius: 5px; /* Rounded corners */
     text-align: center; /* Center text */
@@ -165,6 +165,11 @@ font-size: 0.5em;
     cursor: pointer; /* Pointer cursor on hover */
     transition: background-color 0.3s ease; /* Smooth transition */
     margin: 15px 0; /* Add vertical spacing between buttons */
+  }
+
+  .mobile-menu .selected{
+    background-color: #FF99C9;
+    text-shadow: 1px 1px 1px var(--maize-yellow);
   }
 
   .mobile-menu .default-btn:hover {
