fixing hover of mobile menu colors

--- a/src/App.css
+++ b/src/App.css
@@ -211,7 +211,17 @@ html{
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  /* background-color: rgba(0, 0, 0, 0.8); */
+  /* background-color: var(--maize-yellow); */
+  padding: 1em 2em;
+  overflow: auto;
+  background: url("../images/background.png") no-repeat center center fixed;
+  background-size: 110% 110%;  /* Changed from 110% 100% to cover */
+  background-color: #FF99C9;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
   color: #fff;
   flex-direction: column;
   align-items: center;
@@ -250,7 +260,15 @@ html{
 
   .logo-title{
     margin-top: 20px;
-    margin-left: 10px;
+    margin-left: 0px;
+  }
+
+  .menu-logo{
+    margin-top: 0;
+    min-width: 120%;
+    /* background-color: var(--maize-yellow); */
+    padding: 20px;
+    border-radius: 20px;
   }
 
    .desktop-menu{
