restyle user page for better mobile experience

--- a/src/App.css
+++ b/src/App.css
@@ -215,7 +215,7 @@ html{
   /* background-color: var(--maize-yellow); */
   padding: 1em 2em;
   overflow: auto;
-  background: url("../images/background.png") no-repeat center center fixed;
+  background: url("../images/background-manifesto.png") no-repeat center center fixed;
   background-size: 110% 110%;  /* Changed from 110% 100% to cover */
   background-color: #FF99C9;
   margin: 0;
