--- a/src/styles/ArtistProfile.css
+++ b/src/styles/ArtistProfile.css
@@ -142,6 +142,33 @@
     padding: 8px 16px;
     font-size: 0.9rem;
   }
+
+  .title-username{
+    font-size: 2em !important;
+    text-shadow: 
+    2px 2px 0 var(--maize-yellow),
+    4px 4px 0 var(--carnation-pink) !important; 
+  }
+
+  .title-username::before {
+    content: '*';
+    display: block; /* Put asterisk on its own line */
+    margin-bottom: 10px;
+  }
+  
+  .title-username::after {
+    content: '*';
+    display: block; /* Put asterisk on its own line */
+    margin-top: 10px;
+  }
+
+  .description-user {
+    -webkit-text-stroke: 0.5px var(--carnation-pink) !important; 
+  }
+
+  .social-media-container {
+    margin: 0 !important;
+  }
 }
 
 .title-username {
@@ -158,13 +185,14 @@
     4px 4px 0 var(--carnation-pink);
   transition: all 0.3s ease-in-out;
   font-family: lores-9-plus-narrow;
+  
 }
 
 .title-username:hover {
   transform: translateY(-5px);
   text-shadow: 
-    3px 3px 0 var(--carnation-pink),
-    6px 6px 0 var(--light-blue-sky);
+3px 3px 0 var(--carnation-pink),
+6px 6px 0 var(--light-blue-sky);
 }
 
 .description-user {
@@ -236,4 +264,13 @@
   max-width: 800px;
   width: 80%;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+}
+.title-username::before {
+  content: '*'; /* Put asterisk on its own line */
+  margin-bottom: 10px;
+}
+
+.title-username::after {
+  content: '*';
+  margin-top: 10px;
 }
