--- a/src/App.css
+++ b/src/App.css
@@ -211,13 +211,13 @@ html{
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-color: rgba(0, 0, 0, 0.8); */
+  /* background-color: rgba(0, 255, 255, ); */
   /* background-color: var(--maize-yellow); */
   padding: 1em 2em;
   overflow: auto;
-  background: url("../images/background-manifesto.png") no-repeat center center fixed;
+  /* background: url("../images/background-manifesto.png") no-repeat center center fixed; */
   background-size: 110% 110%;  /* Changed from 110% 100% to cover */
-  background-color: #FF99C9;
+  background-color: var(--light-blue-sky);
   margin: 0;
   padding: 0;
   height: 100%;
