--- a/src/styles/MyPieceOfRandomRainbow.css
+++ b/src/styles/MyPieceOfRandomRainbow.css
@@ -48,7 +48,6 @@
   border-radius: 5px;
   text-decoration: underline dotted;
   text-shadow: 1px 1px 1px var(--light-blue-sky);
-
 }
 
 .video-link:hover {
@@ -314,11 +313,17 @@
   text-shadow: 1px 1px 1px var(--red);
 }
 
+.video-status-group{
+  display: flex;
+  gap: 50px;
+  margin-left: 200px;
+}
+
 /* Update responsive styles */
 @media (max-width: 600px) {
   .button-container {
     flex-direction: column;
-    gap: 15px;
+    gap: 0px;
     width: 100%;
     padding: 0 20px;
     margin-bottom: 0px;
@@ -335,13 +340,19 @@
   }
 
   .video-list {
-    padding: 0 20px;
+    padding: 0px;
     width: 100%;
+    margin: 0px;
+  }
+
+  .video-link{
+    margin-top:15px;
+    margin-right: 20px;
   }
 
   .video-item {
     flex-direction: column;
-    gap: 1rem;
+    gap: 0;
     padding: 15px;
     width: 100%;
   }
@@ -371,5 +382,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  .video-status-group{
+    gap:0px;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
   }
 }
