--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,10 @@ html{
   font-family: "lores-9-plus-wide";
 }
 
+.sign-in-form{
+  font-size: 0.8em !important;
+}
+
 .group-form {
   display: flex;
   flex-direction: column;
@@ -117,8 +121,9 @@ html{
   justify-content: center;
   color:var(--red);
   text-shadow: 2px 2px 1px var(--carnation-pink);
-  font-size: 1.2em;
+  font-size: 0.8em;
   font-family: "lores-9-plus-wide";
+  margin-top: 20px;
 }
 
 
@@ -305,6 +310,16 @@ html{
   .duration-select {
     font-size: 0.7em;
   }
+
+  .sign-in-form{
+    font-size: 1em !important;
+  }
+
+}
+
+.create-account-btn{
+  border: 2px solid var(--carnation-pink) !important;
+  padding: 40px;
 }
 
 .desktop-menu{
