--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -41,7 +41,7 @@ font-size: 0.5em;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 50px;
+  gap: 0px !important;
   margin-right:20px;
 }
 
