--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -133,7 +133,7 @@ font-size: 0.5em;
     justify-content: center; /* Center items vertically */
     gap: 20px;
     height: 100vh; /* Full viewport height */
-    padding: 20px; /* Add padding for margin */
+    padding: 0px 20px; /* Add padding for margin */
     box-sizing: border-box; /* Include padding in height calculation */
   }
   .mobile-menu.show {
